Fix T49023: Segfault when switching brushes while renaming another brush.

rna_GPencilBrush_name_set() was trying to use a mere bGPDbrush as a complete ToolSettings,
was doomed to fail...